--- a/main/templates/code/base.html
+++ b/main/templates/code/base.html
@@ -17,14 +17,13 @@
 <body style="background:#323232">
 
 <!-- THIS IS THE TOP NAVBAR -->
-<div class="position-fixed w-100">
-  <div class="border border-secondary rounded border-1" style="background:#212529">
+<div class="position-fixed w-100" style="z-index: 1000;">
+  <div class="border border-secondary rounded border-1" style="background:#282828">
     <div class="" style="margin-left:14rem">
-
-    <nav class="navbar navbar-expand-lg ">
-      <div class="container-fluid" style="background:#212529">
+      <nav class="navbar navbar-expand-lg ">
+        <div class="container-start" style="background:#282828">
           <div class="navbar-nav">
-          <div class="row">
+            <div class="row">
               <div class="col-auto align-bottom">
                 <a class="nav-link active" href="#">Hi {{request.user.employer.user_name}},{{request.user.employer.last_name}}</a>
               </div>
@@ -36,8 +35,11 @@
             {% endblock title %}
           </div>
         </div>
-      </div>
-    </nav>
+      </nav>
+    </div>
+  </div>
+</div>
+
 <!-- END OF THE TOP NAVBAR-->
 
 
