--- a/main/dashboard/templates/code/dashboard.html
+++ b/main/dashboard/templates/code/dashboard.html
@@ -77,7 +77,7 @@ graph_title': ['Graph'],
  'end_date': ['2024-11-01'], 'db': ['income'],
  'graph': ['bar_graph'],
   'add_graph_data': ['add_graph_data']}> {% endcomment %}
-<form method="POST">
+{% comment %} <form method="POST">
  <div hidden>
  {% csrf_token %}
               {% render_field income_form.graph_title type='title' id='graph_title' class='form-control'  %}
@@ -108,7 +108,7 @@ graph_title': ['Graph'],
       </div>   
 <button type='submit' name='add_graph_data' value='add_graph_data' class='btn btn-primary'>1 month</button>
 </form> 
-
+ {% endcomment %}
 
     <div class="m-3">
       <h1>Dashboard</h1>
@@ -233,9 +233,8 @@ graph_title': ['Graph'],
       </form>
 
         </div>
-
+        </div>
         </div><!-- end of 'modal-content'-->
-
       </div><!-- end of 'modal-dialog' -->
     </div><!-- 'modal fade' -->
 
@@ -269,9 +268,9 @@ graph_title': ['Graph'],
         <button type='button' class='btn btn-success text-uppercase' data-bs-toggle='modal' data-bs-target='#graph_edit_modal_{{graph.graph_data.k}}' data-bs-whatever='@getbootstrap'> Edit Graph </button>
         <button type='submit' class='btn btn-success text-uppercase' name='export_csv'value='export_csv'> Export CSV </button>
          <button type='button' class='btn btn-success text-uppercase' data-bs-toggle='modal' data-bs-target='#change_position_modal_{{graph.graph_data.k}}' data-bs-whatever='@getbootstrap'>Change Position</button>
+         <button type='button' class='btn btn-success text-uppercase' data-bs-toggle='modal' data-bs-target='#graph_compare_modal_{{graph.graph_data.k}}' data-bs-whatever='@getbootstrap'>Compare Graph</button>
 
       </form>
-
 
 
         <!-- THIS IS THE MODAL SECTION THAT HAVE THE CONTROL OVER THE EDIT BUTTON -->
@@ -386,6 +385,110 @@ graph_title': ['Graph'],
       </div>
 
 
+          <!-- this is the compare graph position modal-->
+
+          <div class='col-sm-auto'>
+              <div class='modal' id='graph_compare_modal_{{graph.graph_data.k}}' tabindex='-1' aria-labelledby='graph_compare_modal_label' aria-hidden='true'>
+                <div class='modal-dialog'>
+                  <div class='modal-content'>
+                    <div class='modal-header'>
+                      <h1 class='modal-title fs-5' id='graph_compare_modal_label'>Compare Graph</h1>
+                      <button type='button' class='btn-close' data-bs-dismiss='modal' aria-label='Close'></button>
+                    </div>
+
+                <!-- form of adding new task --> 
+                <div class='modal-body'>
+
+                  <form method='POST' class="compare-graph-form" data-form-id="{{graph.graph_data.k}}">
+
+                    {% csrf_token %}
+
+                    <!-- body of the form fields-->
+
+                    <!-- graph title -->
+                    <div class='mb-3'>
+ 
+                        {% render_field compare_graph_form.graph_title type='title' id=graph.graph_data.k class='form-control' value=graph.graph_data.v.graph_title %}
+                    </div>
+                    <!-- end of graph title -->
+
+                    <!-- graph description-->
+                    <div class='mb-3'>
+
+                        {% render_field compare_graph_form.graph_description type='text' id='graph_description_{{graph.graph_data.k}}' class='form-control' value=graph.graph_data.v.graph_description %}
+                    </div>
+                    <!-- end of graph description-->
+
+                    <!-- start of start_date-->
+                    <div class='mb-3'>
+
+
+                        {% render_field compare_graph_form.start_date type='date' value=graph.graph_data.v.start_date id='graph_date_{{graph.graph_data.k}}' class='form-control'%}
+                    </div>
+                    <!-- end of start_date div -->
+
+                    <!-- start of the end_date div-->
+                      <div class='mb-3'>
+
+
+                        {% render_field compare_graph_form.end_date type='date' id='graph_date_{{graph.graph_data.k}}' value=graph.graph_data.v.end_date class='form-control'%}
+                    </div>
+                    <!-- end of the end_date div-->
+
+                    <!-- test of the options section-->
+                  <div class="mb-3 row">
+                  <label for="data_option" class="col-sm-auto col-form-label">Choose The Graph:</label>
+                    <div class="col-sm-auto">
+                      {% comment %} <select class="form-select selected_edit_graph" aria-label="Default select example">
+                        <option selected class="select" value="select" name="bar_graph">Select One</option>
+                        <option class="graph_choose" value="bar_graph" name="bar_graph">Bar Graph</option>
+                        <option class="graph_choose" value="line_graph" name="line_graph">Line Graph</option>
+                      </select> {% endcomment %}
+                        {% render_field compare_graph_form.graph type='text' class='form-control-plaintext' id='graph_edit_option'%}
+                      </div>
+                    </div> 
+                      
+                    <!-- test of the options section-->
+
+                    <!-- edit database div -->
+                      <div class="mb-3 row">
+                      <label for="data_option" class="col-sm-auto col-form-label">Choose The Data:</label>
+                          <div class="col-sm-auto">
+
+                            {% render_field compare_graph_form.db type='text' class='form-control-plaintext' id='data_edit_option' %}
+                          </div>
+                      </div><!-- end of the database div--> 
+
+
+                {% render_field compare_graph_form.graph_id type='text' value=graph.graph_data.k %}
+                {% render_field compare_graph_form.graph_position type='text' value=graph.graph_data.v.position %}
+              
+              
+              <div class='mb-3'>
+                <label for="position" class="col-sm-auto col-form-label">Choose the position of the graph</label>
+                {% render_field compare_graph_form.dst_position type='text' %}
+              </div>
+
+                <!-- test test test test test -->
+
+                </div><!-- end div of the modal-body -->
+
+                  <!-- modal footer section -->
+                  <div class='modal-footer'>
+                    <button type='button' class='btn btn-secondary' data-bs-dismiss='modal'>Close</button>
+                    <button type='submit' name='compare_graph_data' value='compare_graph_data' class='btn btn-primary compare_graph_button'>Save</button>
+                  </div>
+
+
+                  </div>
+                </form>
+              </div>
+              </div>
+
+
+
+
+          <!-- this is the change position modal section-->
           <div class='col-sm-auto'>
               <div class='modal' id='change_position_modal_{{graph.graph_data.k}}' tabindex='-1' aria-labelledby='change_position_modal_label' aria-hidden='true'>
                 <div class='modal-dialog'>
