--- a/main/dashboard/templates/code/dashboard.html
+++ b/main/dashboard/templates/code/dashboard.html
@@ -22,6 +22,135 @@
 {% block content %}
 <div class='container p-4 pt-5'>
 
+
+<div class="mb-3" style="margin-left:8rem">
+  <div class="border border-secondary rounded border-1" style="background:#212529">
+    <div class="">
+      <nav class="navbar navbar-expand-lg ">
+        <div class="container-start " >
+          <div class="navbar-nav">
+            <div class="row" >
+
+            <div class="row">
+              <div class="col-auto">
+                <li class="nav-item">
+                  <a class="nav-link 
+                            link-body-emphasis 
+                            link-offset-2
+                            link-underline 
+                            link-opacity-25-hover mb-5" 
+                            href="/logout"
+                            aria-disabled="true">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="16" width="16" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zm0-384c13.3 0 24 10.7 24 24V264c0 13.3-10.7 24-24 24s-24-10.7-24-24V152c0-13.3 10.7-24 24-24zM224 352a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"/></svg></a>
+                            </a>
+                            </div>
+                            <div class="col p-2" >
+                              <div class="col">
+                              Maximum Graphs
+                              </div>
+                            <div class="col text-start" >
+                              {{information_insight.max_records}}                            
+                            </div>
+                          </div>
+                        </div>
+                    </div><!-- this is the first row col-->
+
+            <div class="row">
+              <div class="col-auto">
+                <li class="nav-item">
+                  <a class="nav-link 
+                            link-body-emphasis 
+                            link-offset-2
+                            link-underline 
+                            link-opacity-25-hover mb-5" 
+                            href="/logout"
+                            aria-disabled="true">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="16" width="16" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path d="M256 32c14.2 0 27.3 7.5 34.5 19.8l216 368c7.3 12.4 7.3 27.7 .2 40.1S486.3 480 472 480H40c-14.3 0-27.6-7.7-34.7-20.1s-7-27.8 .2-40.1l216-368C228.7 39.5 241.8 32 256 32zm0 128c-13.3 0-24 10.7-24 24V296c0 13.3 10.7 24 24 24s24-10.7 24-24V184c0-13.3-10.7-24-24-24zm32 224a32 32 0 1 0 -64 0 32 32 0 1 0 64 0z"/></svg>                    </a>
+                            </a>
+                            </div>
+                            <div class="col p-2" >
+                              <div class="col" >
+                              Graphs Made
+                              </div>
+                            <div class="col text-start" >
+                              {{information_insight.total_records}}                            
+                            </div>
+                          </div>
+                        </div>
+
+            {% for year,value in information_insight.current_year_income.items %}
+            <div class="row" >
+              <div class="col-auto">
+                <li class="nav-item">
+                  <a class="nav-link 
+                            link-body-emphasis 
+                            link-offset-2
+                            link-underline 
+                            link-opacity-25-hover mb-5" 
+                            href="/logout"
+                            aria-disabled="true">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="16" width="12" viewBox="0 0 384 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path d="M214.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 141.2V448c0 17.7 14.3 32 32 32s32-14.3 32-32V141.2L329.4 246.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160z"/></svg>                    </a>
+                            </a>
+                            </div>
+                            <div class="col p-2" >
+                              <div class="col-auto" >
+                              <p class="text-center">
+                              Income {{year}}
+                              </p>
+                              </div>
+                            <div class="col text-start" >
+                            {{value}}
+                            </div>
+                          </div>
+                        </div>
+                        {% endfor %}
+
+            {% for year,value in information_insight.current_year_spendings.items %}
+
+            <div class="row" >
+              <div class="col-auto">
+                <li class="nav-item">
+                  <a class="nav-link 
+                            link-body-emphasis 
+                            link-offset-2
+                            link-underline 
+                            link-opacity-25-hover mb-5" 
+                            href="/logout"
+                            aria-disabled="true">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="16" width="12" viewBox="0 0 384 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--><path d="M169.4 470.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 370.8 224 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 306.7L54.6 265.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"/></svg>
+                            </a>
+                            </div>
+                            <div class="col p-2" style="pink">
+                              <div class="col">
+                              Spendings in {{year}}
+                              </div>
+                            <div class="col text-start" >
+                            {{value}}
+                            </div>
+                          </div>
+                        </div>
+                        {% endfor %}
+
+
+            <!-- here its the content of the navbar-->
+          </div>
+        </div>
+      </nav>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+{% comment %} 
+
 <p>total graph records : {{information_insight.total_records}}</p>
 <p>maximum graph records :{{information_insight.max_records}} </p>
 {% for year,income in information_insight.current_year_income.items %}
@@ -31,7 +160,7 @@
 {% for year,outcome in information_insight.current_year_spendings.items %}
 <p>on that {{year}} the outcome was {{outcome}}</p>
 {% endfor %}
-
+ {% endcomment %}
 
 
   <div class='border border-secondary rounded border-1' style="background:#212529;">
