--- a/main/teams/templates/code/teams.html
+++ b/main/teams/templates/code/teams.html
@@ -57,4 +57,36 @@
     </table>
   </div>
 
+
+<!-- this is my grid test !!!!!!!!-->
+<div class="container" style="background:#212121">
+<h1>this is my grid</h1>
+
+<div class="row">
+
+<div class="col">
+<div class="row">
+<div class="col">first col</div>
+<div class="col">first col</div>
+<div class="col">first col</div>
+</div>
+</div>
+
+<div class="col">
+
+<div class="row">
+<div class="col-auto">icon - Income in 2024</div>
+<div class="col-auto">second col</div>
+<div class="col-auto">second col</div>
+</div>
+<div class="row">
+<div class="col-auto">243,220</div>
+<div class="col-auto">third col</div>
+<div class="col-auto">third col</div>
+</div>
+</div>
+
+
+</div><!-- the first row-->
+
 {% endblock content %}
